...
                        modifier = Modifier.testTag("daypicker_dismiss"),
                        onClick = onCancel
                    ) {
                        Text(stringResource(R.string.timepicker_dismiss))
                    }
                    Button(
                        modifier = Modifier.testTag("daypicker_confirm"),
                        onClick = onConfirm
                    ) {
                        Text(stringResource(R.string.timepicker_confirm))
                    }
                }
            }
...
